--- a/res/values/csc_config.xml
+++ b/res/values/csc_config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 
-    Copyright (C) 2022 Acme
+    Copyright (C) 2022 Csc
 
     SPDX-License-Identifier: Apache-2.0
 
