--- a/res/values-zh-rCN/csc_strings.xml
+++ b/res/values-zh-rCN/csc_strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 
-    Copyright (C) 2022 Acme
+    Copyright (C) 2022 Csc
 
     SPDX-License-Identifier: Apache-2.0
 
@@ -10,8 +10,8 @@
     <!-- About phone screen,  setting option name  [CHAR LIMIT=40] -->
     <string name="build_date">构建日期</string>
 
-    <!-- Acme version -->
-    <string name="acme_version">Acme UI 版本</string>
+    <!-- Csc version -->
+    <string name="csc_version">CSC UI 版本</string>
 
     <!-- Three-fingers-swipe to screenshot -->
     <string name="three_finger_gesture">滑动截屏</string>
