--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -23,9 +23,10 @@
 
     <com.android.settingslib.widget.LayoutPreference
         android:key="my_device_info_header"
-        android:order="0"
-        android:layout="@layout/settings_entity_header"
+        android:order="-500"
+        android:layout="@layout/device_info_header"
         android:selectable="false"
+        settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
         settings:isPreferenceVisible="false"/>
 
     <PreferenceCategory
@@ -33,59 +34,126 @@
         android:selectable="false"
         android:title="@string/my_device_info_basic_info_category_title">
 
-        <!-- Device name -->
-        <com.android.settings.widget.ValidatedEditTextPreference
-            android:key="device_name"
-            android:order="1"
-            android:title="@string/my_device_info_device_name_preference_title"
-            android:summary="@string/summary_placeholder"
-            settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
-            settings:enableCopying="true"/>
-
-        <!-- Account name -->
+        <!-- Model & hardware -->
         <Preference
-            android:key="branded_account"
-            android:order="2"
-            android:title="@string/my_device_info_account_preference_title"
+            android:key="device_model"
+            android:order="0"
+            android:title="@string/model_info"
+            android:summary="@string/summary_placeholder"
+            android:fragment="com.android.settings.deviceinfo.hardwareinfo.HardwareInfoFragment"
+            settings:enableCopying="true"
+            settings:keywords="@string/keywords_model_and_hardware"
+            settings:layout="@layout/csc_dashboard_preference_top"
+            settings:controller="com.android.settings.deviceinfo.HardwareInfoPreferenceController"/>
+
+        <!-- Build number -->
+        <Preference
+            android:key="build_number"
+            android:order="1"
+            android:title="@string/build_number"
             android:summary="@string/summary_placeholder"
             settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.BrandedAccountPreferenceController"/>
+            settings:layout="@layout/csc_dashboard_preference_middle"
+            settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
 
-        <!-- Phone number
-        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
-            android:key="phone_number"
-            android:order="3"
-            android:title="@string/status_number"
+        <!-- Android version -->
+        <Preference
+            android:key="firmware_version"
+            android:order="2"
+            android:title="@string/firmware_version"
             android:summary="@string/summary_placeholder"
-            android:selectable="false"
-            settings:controller="com.android.settings.deviceinfo.PhoneNumberPreferenceController"
-            settings:enableCopying="true"/ -->
+            android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
+            settings:layout="@layout/csc_dashboard_preference_middle"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
+
+        <!-- CSC version -->
+        <Preference
+            android:key="os_csc_version"
+            android:title="@string/csc_version"
+            android:order="3"
+            android:summary="@string/summary_placeholder"
+            settings:enableCopying="true"
+            settings:layout="@layout/csc_dashboard_preference_bottom"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.CscVersionPreferenceController"/>
+
+<!--        &lt;!&ndash; Account name &ndash;&gt;-->
+<!--        <Preference-->
+<!--            android:key="branded_account"-->
+<!--            android:order="2"-->
+<!--            android:title="@string/my_device_info_account_preference_title"-->
+<!--            android:summary="@string/summary_placeholder"-->
+<!--            settings:enableCopying="true"-->
+<!--            settings:controller="com.android.settings.deviceinfo.BrandedAccountPreferenceController"/>-->
+
+<!--        &lt;!&ndash; Phone number &ndash;&gt;-->
+<!--        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference-->
+<!--            android:key="phone_number"-->
+<!--            android:order="3"-->
+<!--            android:title="@string/status_number"-->
+<!--            android:summary="@string/summary_placeholder"-->
+<!--            android:selectable="false"-->
+<!--            settings:controller="com.android.settings.deviceinfo.PhoneNumberPreferenceController"-->
+<!--            settings:enableCopying="true"/>-->
     </PreferenceCategory>
 
-    <PreferenceCategory
-        android:title="@string/my_device_info_legal_category_title">
+<!--    <PreferenceCategory-->
+<!--        android:key="basic_info_category"-->
+<!--        android:selectable="false"-->
+<!--        android:title="@string/my_device_info_basic_info_category_title">-->
 
-        <!-- Legal information -->
-        <Preference
-            android:key="legal_container"
-            android:order="15"
-            android:title="@string/legal_information"
-            android:fragment="com.android.settings.LegalSettings"/>
+<!--        &lt;!&ndash; Device name &ndash;&gt;-->
+<!--        <com.android.settings.widget.ValidatedEditTextPreference-->
+<!--            android:key="device_name"-->
+<!--            android:order="1"-->
+<!--            android:title="@string/my_device_info_device_name_preference_title"-->
+<!--            android:summary="@string/summary_placeholder"-->
+<!--            settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"-->
+<!--            settings:enableCopying="true"/>-->
 
-        <!-- Regulatory labels -->
-        <Preference
-            android:key="regulatory_info"
-            android:order="16"
-            android:title="@string/regulatory_labels">
-            <intent android:action="android.settings.SHOW_REGULATORY_INFO"/>
-        </Preference>
+<!--        &lt;!&ndash; Account name &ndash;&gt;-->
+<!--        <Preference-->
+<!--            android:key="branded_account"-->
+<!--            android:order="2"-->
+<!--            android:title="@string/my_device_info_account_preference_title"-->
+<!--            android:summary="@string/summary_placeholder"-->
+<!--            settings:enableCopying="true"-->
+<!--            settings:controller="com.android.settings.deviceinfo.BrandedAccountPreferenceController"/>-->
 
-        <!-- Safety & regulatory manual -->
-        <Preference
-            android:key="safety_info"
-            android:order="17"
-            android:title="@string/safety_and_regulatory_info"/>
-    </PreferenceCategory>
+<!--        &lt;!&ndash; Phone number-->
+<!--        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference-->
+<!--            android:key="phone_number"-->
+<!--            android:order="3"-->
+<!--            android:title="@string/status_number"-->
+<!--            android:summary="@string/summary_placeholder"-->
+<!--            android:selectable="false"-->
+<!--            settings:controller="com.android.settings.deviceinfo.PhoneNumberPreferenceController"-->
+<!--            settings:enableCopying="true"/ &ndash;&gt;-->
+<!--    </PreferenceCategory>-->
+
+<!--    <PreferenceCategory-->
+<!--        android:title="@string/my_device_info_legal_category_title">-->
+
+<!--        &lt;!&ndash; Legal information &ndash;&gt;-->
+<!--        <Preference-->
+<!--            android:key="legal_container"-->
+<!--            android:order="15"-->
+<!--            android:title="@string/legal_information"-->
+<!--            android:fragment="com.android.settings.LegalSettings"/>-->
+
+<!--        &lt;!&ndash; Regulatory labels &ndash;&gt;-->
+<!--        <Preference-->
+<!--            android:key="regulatory_info"-->
+<!--            android:order="16"-->
+<!--            android:title="@string/regulatory_labels">-->
+<!--            <intent android:action="android.settings.SHOW_REGULATORY_INFO"/>-->
+<!--        </Preference>-->
+
+<!--        &lt;!&ndash; Safety & regulatory manual &ndash;&gt;-->
+<!--        <Preference-->
+<!--            android:key="safety_info"-->
+<!--            android:order="17"-->
+<!--            android:title="@string/safety_and_regulatory_info"/>-->
+<!--    </PreferenceCategory>-->
 
     <PreferenceCategory
         android:key="device_detail_category"
@@ -99,18 +167,8 @@
             android:title="@string/sim_status_title"
             settings:keywords="@string/keywords_sim_status"
             android:summary="@string/summary_placeholder"
+            settings:layout="@layout/csc_dashboard_preference_top"
             settings:enableCopying="true"/>
-
-        <!-- Model & hardware -->
-        <Preference
-            android:key="device_model"
-            android:order="31"
-            android:title="@string/model_info"
-            android:summary="@string/summary_placeholder"
-            android:fragment="com.android.settings.deviceinfo.hardwareinfo.HardwareInfoFragment"
-            settings:enableCopying="true"
-            settings:keywords="@string/keywords_model_and_hardware"
-            settings:controller="com.android.settings.deviceinfo.HardwareInfoPreferenceController"/>
 
         <!-- IMEI -->
         <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
@@ -120,16 +178,9 @@
             android:summary="@string/summary_placeholder"
             settings:keywords="@string/keywords_imei_info"
             settings:enableCopying="true"
+            settings:layout="@layout/csc_dashboard_preference_middle"
             settings:controller="com.android.settings.deviceinfo.imei.ImeiInfoPreferenceController"/>
 
-        <!-- Android version -->
-        <Preference
-            android:key="firmware_version"
-            android:order="42"
-            android:title="@string/firmware_version"
-            android:summary="@string/summary_placeholder"
-            android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -141,8 +192,9 @@
             android:order="44"
             android:title="@string/wifi_ip_address"
             android:summary="@string/summary_placeholder"
-            android:selectable="false"
-            settings:enableCopying="true"/>
+            settings:layout="@layout/csc_dashboard_preference_top"
+            settings:enableCopying="true"
+            android:selectable="false"/>
 
         <!-- Wi-Fi MAC address -->
         <Preference
@@ -151,6 +203,7 @@
             android:title="@string/status_wifi_mac_address"
             android:summary="@string/view_saved_network"
             android:fragment="com.android.settings.wifi.savedaccesspoints2.SavedAccessPointsWifiSettings2"
+            settings:layout="@layout/csc_dashboard_preference_middle"
             settings:enableCopying="false"/>
 
         <!-- Factory Wi-Fi MAC address -->
@@ -159,8 +212,9 @@
             android:order="46"
             android:title="@string/status_device_wifi_mac_address"
             android:summary="@string/summary_placeholder"
-            android:selectable="false"
-            settings:enableCopying="true"/>
+            settings:layout="@layout/csc_dashboard_preference_middle"
+            settings:enableCopying="true"
+            android:selectable="false"/>
 
         <!-- Bluetooth address -->
         <Preference
@@ -168,8 +222,9 @@
             android:order="47"
             android:title="@string/status_bt_address"
             android:summary="@string/summary_placeholder"
-            android:selectable="false"
-            settings:enableCopying="true"/>
+            settings:layout="@layout/csc_dashboard_preference_middle"
+            settings:enableCopying="true"
+            android:selectable="false"/>
 
         <!-- Device up time -->
         <Preference
@@ -177,6 +232,7 @@
             android:order="48"
             android:title="@string/status_up_time"
             android:summary="@string/summary_placeholder"
+            settings:layout="@layout/csc_dashboard_preference_bottom"
             android:selectable="false"/>
 
         <!-- Manual -->
@@ -201,14 +257,7 @@
             android:title="@string/fcc_equipment_id"
             android:summary="@string/summary_placeholder"/>
 
-        <!-- Build number -->
-        <Preference
-            android:key="build_number"
-            android:order="53"
-            android:title="@string/build_number"
-            android:summary="@string/summary_placeholder"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
